--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,30 @@
 /nbdist/
 /.nb-gradle/
 /build/
+
+# system ignore
+.DS_Store
+Thumbs.db
+
+#package file
+
+*.war
+*.ear
+
+#kdiff3 ignore
+*.orig
+
+#maven ignore
+target/
+
+#eclipse ignore
+.settings/
+.project
+.classpatch
+
+#idea
+.idea/
+/idea/
+*.ipr
+*.iml
+*.iws
